cf-for-k8s/config/prometheus-operator/user/opsfiles/prometheus-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: prometheus-operator
spec:
  hosts:
    - prometheus.vcap.me
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: prometheus-operator-prometheus.prometheus-operator.svc.cluster.local
            port:
              number: 9090
